--- a/my-app/public/updater.html
+++ b/my-app/public/updater.html
@@ -8,7 +8,7 @@
   <body>
     <div class="root-updater">
       <div class="content">
-        <h1 id="text-message">Одну секунду</h1>
+        <h1 id="text-message">Проверяем на наличие обновления</h1>
       </div>
     </div>
   </body>
