--- a/my-app/public/updater.html
+++ b/my-app/public/updater.html
@@ -7,9 +7,8 @@
   </head>
   <body>
     <div class="root-updater">
-      <div class="content">
-        <h1 id="text-message">Проверяем на наличие обновления</h1>
-      </div>
+      <div class="img"></div>
+      <h1 id="text-message">Проверяем на наличие обновления</h1>
     </div>
   </body>
   <script defer src="./electron-pages/updateRenderer.js"></script>
